--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('~ag-grid-community/styles/ag-grid.min.css');
+@import url('~ag-grid-community/styles/agGridQuartzFont.css');
+@import url('~ag-grid-community/styles/ag-theme-material.min.css');
+@import url('./../node_modules/ag-grid-community/styles/ag-theme-alpine.min.css');
+@import url('./../node_modules/ag-grid-community/styles/ag-theme-alpine.css');
+
+@import url('./../node_modules/bootstrap/dist/css/bootstrap.min.css');
+
+/* body {
+    overflow: hidden;
+} */
